--- a/index.htm
+++ b/index.htm
@@ -93,23 +93,19 @@
             </section>
         </section>
 
-        <h2>💴 Conversor de Moeda</h2>
-        
-        <section class="out">
-            <div>
-                <select id="from_currency" class="moeda2"></select>
-                <input type="number" id="from_ammount" value="1" class="moeda1"/>
-              </div>
-              <br><button id="swap"> ⇅ </button><br>
-              <select id="to_currency" class="moeda2"></select>
-                <input type="number" id="to_ammount" class="moeda1"/>
-                 </div>
-                 <br><section id="tax_info" class="tela"></section>
-        </section>
+
 
     </main>
     <script src="script.js"></script>
 
- 
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RQ819RVB2H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RQ819RVB2H');
+</script>
 </body>
 </html>
