--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@
             </section>
         </section>
 
-        <h2>Medição</h2>
+        <h2>📏 Medição</h2>
         <section class="out" id="medicao">
             <input type="number" name="altura" id="altura" placeholder="Altura:">
             <input type="number" name="largura" id="largura" placeholder="Largura:">
@@ -65,7 +65,7 @@
             </section>
         </section>
 
-        <h2>📏 Conversor de Medidas</h2>
+        <h2>📐 Conversor de Medidas</h2>
         <section class="out">
             <input type="number" name="medida1" id="medida1" placeholder="Digite uma medida em metros:"><br>
             <button id="med1">Converter</button>
