--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -38,7 +39,10 @@
                 <section class="telaV3"></section> <!-- Tela oculta -->
                 <section class="telaV2"></section><br>
                 <section class="telaV4"></section>
-                
+                <section class="telaV5"></section>
+                <span class="material-symbols-outlined" style="font-size: 32px;" id="setaGasto">arrow_drop_down</span><br>
+                <input type="number" placeholder="Digite o teto de gastos" id="tetoGasto">
+                <button id="definirTeto">Definir Teto</button>
         </section>
 
         <h2>💸 Compara Preço</h2>
