--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
     <main>
         <h2>⏲️ Contador Diario</h2>
         <section class="out">
-            <p  class="intro">Para usar o contador basta clicar no botão mais (+), após o término de cada dia ele vai resetar o contador diário mas mantêm a contagem da semana por uma semana a partir da primeira contagem.</p>
+            <p  class="intro">Para usar o contador basta clicar no botão mais (+), após o término de cada dia ele vai resetar o contador diário mas mantêm a contagem da semana por uma semana a partir da primeira contagem. Se o contador não zerar no outro dia basta atualizar a página.</p>
                 <button id="menos">-</button>
                 <section class="tela"></section>
                 <button id="mais">+</button><br>
@@ -28,7 +28,7 @@
 
         <h2>💳 Dinheiro Gasto</h2>
         <section class="out">
-            <p class="intro">Para adicionar dinheiro gasto basta clicar no botão mais (+) ou menos (-) para remover o valor, após o término de cada dia ele vai resetar o contador diário mas mantêm a contagem do mês, para terminar o mês basta clicar no botão virar mês.</p>
+            <p class="intro">Para adicionar dinheiro gasto basta clicar no botão mais (+) ou menos (-) para remover o valor, após o término de cada dia ele vai resetar o contador diário mas mantêm a contagem do mês, para terminar o mês basta clicar no botão virar mês. Se o contador não zerar no outro dia basta atualizar a página.</p>
                 <button id="menosV">-</button>
                 <input type="number" placeholder="Digite o valor gasto:" id="valorGasto" value="1">
                 <button id="maisV">+</button><br>
