--- a/index.htm
+++ b/index.htm
@@ -18,11 +18,23 @@
                 <button id="menos">-</button>
                 <section class="tela"></section>
                 <button id="mais">+</button><br>
-                <section class="tela15"></section>
+                <section class="tela15">Data Inicial:</section>
                 <button id="reset">Reset Dia</button>
                 <section class="tela2"></section>
                 <button id="reset2">Reset Sem</button>
-                <section class="tela25"></section>
+                <section class="tela25">Contador Semanal:</section>
+                <table id="contSem">
+                    <tbody>
+                        <tr id="trdom"></tr>
+                        <tr id="trseg"></tr>
+                        <tr id="trter"></tr>
+                        <tr id="trqua"></tr>
+                        <tr id="trqui"></tr>
+                        <tr id="trsex"></tr>
+                        <tr id="trsab"></tr>
+                    </tbody>
+                    <tfoot id="rodSem"></tfoot>
+                </table>
         </section>
 
 
@@ -162,8 +174,9 @@
 
 
     </main>
-    <script src="script.js"></script>
+     <script src="script.js"></script>
     <script src="dinheiroGasto.js"></script>
+    <script src="contadorDiario.js"></script>
 
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RQ819RVB2H"></script>
