--- a/index.htm
+++ b/index.htm
@@ -175,8 +175,11 @@
 
     </main>
     <script src="script.js"></script>
-    <script src="dinheiroGasto.js"></script>
     <script src="contadorDiario.js"></script>
+    <script src="dinheiroGasto.js"></script>
+    <script src="comparaPreco.js"></script>
+    <script src="medicao.js"></script>
+    
 
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RQ819RVB2H"></script>
