Hotfix + medicao 2d export XLS and CSV update

--- a/index.htm
+++ b/index.htm
@@ -105,6 +105,7 @@
                             </table>
                         </div>
                         <button id="resetC2">Reset</button>
+                        <select name="formatoEX" id="formatoEX"></select>
                         <button id="export2">Salvar</button>
             </section>
 
