Import function add

--- a/index.htm
+++ b/index.htm
@@ -106,7 +106,8 @@
                         </div>
                         <button id="resetC2">Reset</button>
                         <select name="formatoEX" id="formatoEX"></select>
-                        <button id="export2">Salvar</button>
+                        <button id="export2">Salvar</button><br>
+                        <input type="file" id="seletorDeArquivo" accept=".csv" >
             </section>
 
             <h3 id="tm3">Medir Volume Cubico:</h3>
