--- a/index.htm
+++ b/index.htm
@@ -107,7 +107,7 @@
                         <button id="resetC2">Reset</button>
                         <select name="formatoEX" id="formatoEX"></select>
                         <button id="export2">Salvar</button><br>
-                        <input type="file" id="seletorDeArquivo" accept=".csv" >
+                        <input type="file" id="seletorDeArquivo" accept=".csv, text/csv" >
             </section>
 
             <h3 id="tm3">Medir Volume Cubico:</h3>
