--- a/index.htm
+++ b/index.htm
@@ -103,6 +103,14 @@
                                 <tfoot id="resultadoS2">
                                 </tfoot>
                             </table>
+
+                            <table id="m1">
+                                <thead>
+                                    <tr><th colspan="2">Soma Parcial dos Itens</th></tr>
+                                </thead>
+                                <tbody id="resultadoM1">
+                                </tbody>
+                            </table>
                         </div>
                         <button id="resetC2">Reset</button>
                         <select name="formatoEX" id="formatoEX"></select>
