Uptades and BugFix

--- a/index.htm
+++ b/index.htm
@@ -12,9 +12,10 @@
     <header><h1><img src="favicon.ico" alt="Calculadora">Calculadora Multifuncional</h1></header>
 
     <main>
-        <h2>⏲️ Contador Diario</h2>
+        <h2><span class="aut">⏲️</span> Contador Diario</h2>
         <section class="out">
             <p  class="intro">Para usar o contador basta clicar no botão mais (+), após o término de cada dia ele vai resetar o contador diário mas mantêm a contagem da semana por uma semana a partir da primeira contagem. Se o contador não zerar no outro dia basta atualizar a página.</p>
+                <button id="virarDia">Virar Dia</button>
                 <button id="menos">-</button>
                 <section class="tela"></section>
                 <button id="mais">+</button><br>
@@ -35,7 +36,6 @@
                     </tbody>
                     <tfoot id="rodSem"></tfoot>
                 </table>
-                <!--<button id="virarDia">virarDia</button><br>-->
                 <section id="tela35"></section>
         </section>
 
