--- a/index.htm
+++ b/index.htm
@@ -25,14 +25,8 @@
                 <button id="reset2">Reset Sem</button>
                 <section class="tela25">Contador Semanal:</section>
                 <table id="contSem">
-                    <tbody>
-                        <tr id="trdom"></tr>
-                        <tr id="trseg"></tr>
-                        <tr id="trter"></tr>
-                        <tr id="trqua"></tr>
-                        <tr id="trqui"></tr>
-                        <tr id="trsex"></tr>
-                        <tr id="trsab"></tr>
+                    <tbody id="bodySem">
+
                     </tbody>
                     <tfoot id="rodSem"></tfoot>
                 </table>
