--- a/index.htm
+++ b/index.htm
@@ -90,7 +90,6 @@
                     <input type="number" name="profund" id="profund"><br>
                 
                     <button id="menosC2">Diminuir</button>
-                    <button id="ordenarM2">Ordenar</button>
                     <button id="med2">Somar</button>
                     
                         <div class="container">
@@ -113,8 +112,9 @@
                             </table>
                         </div>
                         <button id="resetC2">Reset</button>
-                        <select name="formatoEX" id="formatoEX"></select>
-                        <button id="export2">Salvar</button><br>
+                        <button id="export2">Salvar</button>
+                        <button id="ordenarM2">Ordenar</button><br>
+                        <select name="formatoEX" id="formatoEX"></select><br>
                         <input type="file" id="seletorDeArquivo" accept=".csv, text/csv" >
             </section>
 
