--- a/index.htm
+++ b/index.htm
@@ -85,9 +85,10 @@
                 <section class="in" id="m2">
                     
                     <input type="text" name="nome2" id="nome2" value="Área" autocomplete="on" placeholder="Digite nome do Item:">
+                    <input type="number" name="profund" id="profund">
                     <input type="number" name="altura" id="altura" placeholder="Digite a Altura:">
                     <input type="number" name="largura" id="largura" placeholder="Digite a Largura:">
-                    <input type="number" name="profund" id="profund"><br>
+                    <br>
                 
                     <button id="menosC2">Diminuir</button>
                     <button id="med2">Somar</button>
