--- a/index.htm
+++ b/index.htm
@@ -80,7 +80,7 @@
         <h2>📏 Medição</h2>
         <section class="out" id="medicao">
             <p class="intro">Para somar basta preencher os 3 campos do tipo de medida que você gostaria de fazer, e clicar em somar:</p>
-            <label for="medType" class="med">Tipo de Medição:</label><select name="medType" id="medType" class="med"></select><br>
+            <div class="labelB"><label for="medType" class="med">Tipo de Medição:</label><select name="medType" id="medType" class="med"></select></div>
             
                 <section class="in" id="m2">
                     
