--- a/index.htm
+++ b/index.htm
@@ -84,7 +84,7 @@
             
                 <section class="in" id="m2">
                     
-                    <div class="containerm2"><label for="nome2" class="labelm2">Item:</label><input type="text" name="nome2" id="nome2" value="Área" autocomplete="on" placeholder="Digite nome do Item"></div>
+                    <div class="containerm2"><label for="nome2" class="labelm2">Item:</label><input type="text" name="nome2" id="nome2" autocomplete="on" placeholder="Digite nome do Item"></div>
                     <div class="containerm2" id="cpro"><label for="profund" id="lpro" class="labelm2"></label><input type="number" name="profund" id="profund"></div>
                     <div class="containerm2"><label for="altura" class="labelm2">Altura:</label><input type="number" name="altura" id="altura" placeholder="Digite a Altura"></div>
                     <div class="containerm2"><label for="largura" class="labelm2">Largura:</label><input type="number" name="largura" id="largura" placeholder="Digite a Largura"></div>
