--- a/index.htm
+++ b/index.htm
@@ -119,7 +119,8 @@
 
                         <button id="resetC2">Reset</button>
                         <button id="export2">Salvar</button>
-                        <button id="ordenarM2">Ordenar</button><br>
+                        <button id="ordenarM2">Ordenar</button>
+                        <button id="posicaoM2">Posição</button><br>
                         <select name="formatoEX" id="formatoEX"></select><br>
                         
                 </section>
