--- a/index.htm
+++ b/index.htm
@@ -85,7 +85,6 @@
                 <section class="in" id="m2">
                     <div class="container2">
                             <div class="container">
-                                
                                 <table id="m2">
                                     <thead id="theadM2">
                                         <tr><th>Nome</th><th>Altura</th><th>Largura</th><th>m²</th></tr>
@@ -107,7 +106,7 @@
                     <button id="menosC2">Diminuir</button>
                     <button id="med2">Somar</button>
                     
-                                <div class="container2">
+                                <div class="container2" id="containerM1">
                                     <table id="m1">
                                         <thead id="theadM1">
                                             <tr><th id="som1">Soma dos Itens</th><th>Área</th></tr>
