Update style and bug fix

--- a/medicao.htm
+++ b/medicao.htm
@@ -22,7 +22,7 @@
             
                 <section class="in" id="m2">
                     <div class="containerNome"><label for="nomeMed">Nome: </label><input type="text" name="nomeMed" id="nomeMed" placeholder="Digite o nome da Medição"><span id="dataMed"></span></div>
-                    <div class="container2">
+                    <div class="container2" id="container2">
                             <div class="container" id="containerM0">
                                 <table id="m2">
                                     <thead id="theadM2">
