--- a/medicao.htm
+++ b/medicao.htm
@@ -69,6 +69,7 @@
 
 
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/docx@8.5.0/build/index.umd.js"></script>
     <script src="medicao.js"></script>
     
 
