--- a/index.htm
+++ b/index.htm
@@ -23,8 +23,9 @@
 
         <h2><a href="compara.htm" rel="next">💸 Compara Preço</a></h2>
         
+        <h2><a href="esquadro.htm">📐 Esquadro</a></h2>
 
-        <h2><a href="conversoes.htm">📐 Conversões</a></h2>
+        <h2><a href="conversoes.htm">💱 Conversões</a></h2>
         
 
     </main>
