--- a/conversoes.htm
+++ b/conversoes.htm
@@ -24,7 +24,7 @@
             </section>
         </section>
 
-        <h2>📐 Conversor de Medidas</h2>
+        <h2>⚖️ Conversor de Medidas</h2>
         <section class="out">
             <input type="number" name="medida1" id="medida1" placeholder="Digite uma medida em metros:"><br>
             <button id="med1">Converter</button>
