--- a/medicao.htm
+++ b/medicao.htm
@@ -80,8 +80,19 @@
            
         </section>
 
-        <h3>Instrução</h3>
-        <p class="intro">Para somar basta preencher os vazios e clicar em somar, após a soma o último campo ficara vazio mas você pode alterar a ordem dos campos para que outros fiquem vazio. Você pode exportar para 4 tipos de arquivos: CSV, XML, DOC e PDF. E pode importar novamente as medidas salvas nos formatos CSV e XML.</p>
+        <h3 class="ins">Instruções</h3>
+        <ol>
+            <li>Selecione o tipo de medição desejada, você pode alterar a qualquer momento.</li>
+             <li>Preencha os campos necessários, como nome, altura e largura.</li>
+            <li>Clique em "Somar" para calcular a área total ou pressione "Enter".</li>
+            <li>O último campo sempre vai limpar após a soma, mas você pode alterar a ordem arrastando o campo para baixo.</li>
+            <li>Se desejar você pode atribuir um nome a medição, você pode alterar a qualquer momento.</li>
+            <li>Se você quiser alterar um item basta clicar na tabela no item que deseja alterar e clicar em "alterar" ao lado da tabela ou pressionar "Enter", você também pode deletar o item pressionando no botão.</li>
+            <li>Se você adicionar itens com nomes diferentes a soma por item vai aparecer em uma segunda tabela.</li>
+            <li>Você pode deletar um conjunto de itens pressionando o botão de "Edição" e escolhendo o item. Você também pode alterar o item preenchendo somente os campos que deseja alterar e clicando em alterar.</li>
+            <li>Você pode exportar os dados em diferentes formatos.</li>
+            <li>Você pode importar novamente os dados criados na Medição salvos em "CSV" e "XLS", você pode importar varias Medições de uma vez.</li>
+        </ol>
 
 
     </main>
